Responses fixes + jwt authentication + Agregar y eliminar servicios adicionales de hoteles